<resources>
    <string name="app_name">Cutter</string>
    <string name="get_info_content1">Thank you for trusting and using cutter app. According to relevant laws and regulations, we will collect and use your personal information after fully protecting your right to know and obtaining your explicit authorization. Before using cutter app and service, please read it carefully</string>
    <string name="get_info_content2">,And make sure that you have fully understood the collection and use rules of your personal information</string>
    <string name="agreen">Agree</string>
    <string name="get_info_title">Tips</string>
    <string name="not_agreen">Disagree and quit</string>
    <string name="network_error">Connection failed</string>
    <string name="reload_click">Click to retry</string>
    <string name="no_data">No data</string>
    <string name="no_content">No data temporarily</string>
    <string name="app_exit_tip">Press again to leave the App</string>
    <string name="home">Home</string>
    <string name="param">Parameters</string>
    <string name="mine">Personal</string>
    <string name="switch_language">Switch language</string>
    <string name="welcome">Hi, \nWelcome to login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_input">Email:</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="vercodeinput">Verify code:</string>
    <string name="getvercode">Get</string>
    <string name="password_input">Password:</string>
    <string name="password_hint">Set a login password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">Enter your login password again</string>
    <string name="guide_forgetpwd">Forgot your password?</string>
    <string name="guide_register">No account?</string>
    <string name="guide_register1">Go to register></string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="action_ok">OK</string>
    <string name="action_hint">Hint</string>
    <string name="action_delete_content">Are you sure to delete?</string>
    <string name="action_cancel">Cancel</string>
    <string name="register">Registration</string>
    <string name="register_account">Register</string>
    <string name="register_action">Determine registration</string>
    <string name="get_code_retry">s and try again</string>
    <string name="agree_protocol">I have read and agree</string>
    <string name="user_protocol">《User Agreement》</string>
    <string name="privacy_protocol">《Privacy Agreement》</string>
    <string name="not_select_agree_protocol">Please agree to the user agreement first</string>
    <string name="serial_number">Serial number:</string>
    <string name="serial_number_hint">Registration serial number</string>
    <string name="email_code_error">Verify code is error</string>
    <string name="empty_serialnum">Serial number can not be empty</string>
    <string name="empty_email">Email can not be empty</string>
    <string name="confirm">OK</string>
    <string name="empty_code">Verify code can not be empty</string>
    <string name="empty_pwd">Password can not be empty</string>
    <string name="not_pwd_common">Inconsistent passwords twice</string>
    <string name="invalid_email">The email is malformed</string>
    <string name="no_than_pwd">Password must be 6 to 20 characters</string>
    <string name="no_than_n_pwd">New password must be 6 to 20 characters</string>
    <string name="no_than_s_pwd">The current password must be 6 to 20 digits</string>
    <string name="no_than_c_pwd">Confirm password must be 6 to 20 digits</string>
    <string name="empty_cpwd">Confirmation password can not be empty</string>
    <string name="forget_pwd">Forgot your password</string>
    <string name="home_phone_full">Front film (full scale)</string>
    <string name="home_phone_shell">Front film (with shell)</string>
    <string name="home_phone_behind">Color film (back sticker)</string>
    <string name="home_phone_lens">Lens film</string>
    <string name="home_phone_oca">OCA glue</string>
    <string name="home_phone_other">Others</string>
    <string name="scan">Scanning</string>
    <string name="click_light">Light</string>
    <string name="authorization_is_prohibited">Authorization is prohibited</string>
    <string name="bluetooth_match_status">Match Status:</string>
<string name="current_bluetooth">Device in use:</string>
    <string name="bluetooth_not_match">Not yet matched</string>
    <string name="start_mathc">Start pairing</string>
    <string name="total_cut_times">Total Cuts</string>
    <string name="remain_cut_times">Remaining cuts</string>
    <string name="num_cut_times">% times</string>
    <string name="cut_speed">Cutting  speed</string>
    <string name="knife_press">Knife pressure</string>
    <string name="cut_speed1">Cutting speed:</string>
    <string name="knife_press1">Knife pressure:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="use">Use</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="new_param">New</string>
    <string name="edit_param">Edit</string>
    <string name="reset_value">Starting point of the cutter</string>
    <string name="param_info_list">General settings</string>
    <string name="add">Add</string>
    <string name="add_name_hint">Please enter a name</string>
    <string name="current_device">Device in use:</string>
    <string name="not_match">Not matched</string>
    <string name="connecting">Connecting ...</string>
    <string name="start_match">Start match</string>
    <string name="scan_blue">Rescan</string>
    <string name="message_list">Message list</string>
    <string name="message_detail">message details</string>
    <string name="empty_select_message">Please select a message</string>
    <string name="empty_message">No messages yet</string>
    <string name="message_delete">Delete message</string>
    <string name="finish">Done</string>
    <string name="goods_list">Purchasing requirements</string>
    <string name="order_list">Purchase records</string>
    <string name="order_detail">Purchasing Details</string>
    <string name="goods_detail">Product details</string>
    <string name="shoppingcard_list">Purchase list</string>
    <string name="changepwd">Change password</string>
    <string name="change_pwd_success">Password changed successfully</string>
    <string name="logout">Sign out</string>
    <string name="select">Select</string>
    <string name="select_brand">Select a brand</string>
    <string name="select_model">Select model</string>
    <string name="address_new">New address</string>
    <string name="address_edit">Edit address</string>
    <string name="addressList">My addresses</string>
    <string name="address_add">New address</string>
    <string name="empty_address_list">No address information</string>
    <string name="seach_tips">Please enter the product name you need</string>
    <string name="seach">Search</string>
    <string name="sort_all">Composite</string>
    <string name="sort_sales">Sales</string>
    <string name="sort_price">Price</string>
    <string name="sales_num">Sold:</string>
    <string name="price_two_dot">% 1 $ .2f</string>
    <string name="rmb_sign">$</string>
    <string name="num_unit">times</string>
    <string name="start_make">OK to make</string>
    <string name="make">Making mobile phone film</string>
    <string name="shoppingcard">Shopping cart</string>
    <string name="goods_introduce">Product description</string>
    <string name="add_shopping">Add to cart</string>
    <string name="shoppingcard_detail">Product details:&#160;&#160;</string>
    <string name="number">Number:</string>
    <string name="submit">Confirm submission</string>
    <string name="remark">Remarks:</string>
    <string name="category">Category:</string>
    <string name="user_name">Name</string>
    <string name="user_phone">Mobile number</string>
    <string name="user_address">Detailed address</string>
    <string name="default_address">Default</string>
    <string name="user_address_default">Set as default address</string>
    <string name="user_name_hint">Recipient name</string>
    <string name="user_phone_hint">Recipient\'s mobile phone number</string>
    <string name="user_address_hint">Detailed address</string>
    <string name="receiver_name">Recipient:&#160;&#160;</string>
    <string name="receiver_phone">Phone:&#160;&#160;</string>
    <string name="receiver_address">Shipping address:&#160;&#160;</string>
    <string name="empty_address">Consignee information</string>
    <string name="empty_shoppingcard">Please select a product</string>
    <string name="empty_goods_type">Please select specifications</string>
    <string name="select_bluetooth">Select Bluetooth</string>
    <string name="match_bluetooth">Bluetooth that has been matched</string>
    <string name="not_match_bluetooth">Unmatched Bluetooth</string>
    <string name="bluetooth_bonded">Bound</string>
    <string name="bluetooth_not_bond">Unbound</string>
    <string name="bluetooth_bonding">Bundling</string>
    <string name="bluetooth_useing">In use</string>
    <string name="shopping_submit_success">Submitted shopping list</string>
    <string name="device_not_connect">The device is not connected</string>
    <string name="thread_exception">Thread exception!</string>
    <string name="read_exception">Reading exception!</string>
    <string name="blue_not_connection">Bluetooth is not connected, please connect first!</string>
    <string name="send_finish">Send it!</string>
    <string name="send_failed">Failed to send!</string>
    <string name="plt_download_failed">File download failed</string>
    <string name="plt_transport_failed">Transfer failed, please retransmit!</string>
    <string name="plt_transport_success">Transfer succeeded</string>
    <string name="add_shoppingcard_success">Added to cart</string>
    <string name="email_send_success">Mail sent successfully</string>
    <string name="order_no">Shopping ID:&#160;&#160;</string>
    <string name="order_time">Purchase time:&#160;&#160;</string>
    <string name="order_price">Order Price:&#160;&#160;</string>
    <string name="order_status_wait">To be confirmed</string>
    <string name="order_status_ok">Confirmed</string>
    <string name="order_status_refuse">Delivered</string>
    <string name="qc_code_close">Close</string>
    <string name="qr_code_select_picture">Photo</string>
    <string name="qr_code_open_flash_light">Turn on the flashlight</string>
    <string name="qr_code_close_flash_light">Turn off the flashlight</string>
    <string name="qr_code_auto_scan_notification">Put the QR code into the box to scan it automatically</string>
    <string name="qr_code_notification">Tips</string>
    <string name="qr_code_camera_not_open">It seems your camera function is not turned on ~ go to "Settings>Privacy>Camera \" Set it up</string>
    <string name="qr_code_positive_button_know">I know</string>
    <string name="qr_code_positive_button_confirm">Confirmation</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Can\'t read the link in the picture, try another picture</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, the scanned content cannot be opened</string>
    <string name="qr_code_camera_not_found">​​No camera detected</string>
    <string name="qr_num_light_tip">Your phone does not have a flash!</string>
    <string name="qr_scanner_err_title">Identification failed</string>
    <string name="qr_scanner_err_content">Please scan the correct QR code</string>
    <string name="qr_scanner_err_cancel">OK</string>
    <string name="modify_info">Modify data</string>
</resources>