<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/home" />

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_match_status" />

        <TextView
            android:id="@+id/bluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_not_match"
            android:textColor="@color/color_F56C5E" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/funcList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bluetooth"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_list" />

        <TextView
            android:id="@+id/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase" />

        <TextView
            android:id="@+id/changepwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepwd" />


    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/funcList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:text="@string/logout" />

</RelativeLayout>
