<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/home" />

    <LinearLayout
        android:id="@+id/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_match_status" />

        <TextView
            android:id="@+id/bluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_not_match"
            android:textColor="@color/color_F56C5E" />

    </LinearLayout>


    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/bluetooth"
        android:layout_marginTop="@dimen/dimen_20dp" />

    <RelativeLayout
        android:id="@+id/func"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner">

        <LinearLayout
            android:id="@+id/totalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cut_times" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cut_times" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/remindView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/remind_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain_cut_times" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain_cut_times" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/scanView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/scan_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan" />
        </LinearLayout>


    </RelativeLayout>

    <include
        android:id="@+id/membraneType"
        layout="@layout/widget_xrecycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/func"
        android:layout_marginTop="@dimen/dimen_20dp" />

</RelativeLayout>
