<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/home" />

    <RelativeLayout
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_marginTop="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/speedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cut_speed" />

        <SeekBar
            android:id="@+id/speedBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/speedValue"
            android:layout_toEndOf="@+id/speedName" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/press"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed"
        android:layout_marginTop="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/pressureName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knife_press" />

        <SeekBar
            android:id="@+id/pressureBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/pressureValue"
            android:layout_toEndOf="@+id/pressureName" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/resetValue"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/press"
        android:text="@string/reset_value" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/resetValue"
        android:layout_marginTop="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/commonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_info" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add" />

        <include
            android:id="@+id/commonInfoList"
            layout="@layout/widget_xrecycleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commonInfo"
            android:layout_marginTop="@dimen/dimen_20dp" />

    </RelativeLayout>
</RelativeLayout>
