<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_corner_10"
    android:paddingBottom="@dimen/dimen_20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:text="@string/modify_info"
            android:textColor="@color/color_222A37"
            android:textSize="@dimen/font_12" />
    </RelativeLayout>

    <EditText
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/text_border"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:drawablePadding="@dimen/dimen_20dp"
        android:gravity="center_vertical"
        android:hint="@string/user_phone"
        android:paddingStart="@dimen/dimen_20dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:textColor="@color/color_9E9E9E"
        android:textColorHint="@color/color_80E9E9E"
        android:textSize="@dimen/font_12" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:padding="@dimen/dimen_5dp"
        android:background="@drawable/bg_corner_maincolor"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />

</LinearLayout>